@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19911205
+MANIFEST for ded, version t19920102
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
